# qhexedit2

./: CMakeLists.txt  FindDeployQHexEdit.cmake
designer/: CMakeLists.txt
example/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  optionsdialog.cpp  optionsdialog.h  searchdialog.cpp  searchdialog.h
src/: CMakeLists.txt  chunks.cpp  chunks.h  color_manager.cpp  color_manager.h  commands.cpp  commands.h  qhexedit.cpp  qhexedit.h
test/: CMakeLists.txt
